Fix use of X.valueOf() instead of new X()
Signed-off-by: Chris Jackson <chris@cd-jackson.com>