@@ -190,12 +190,12 @@ public class CommandClassConfigurationV4 {
         int msgOffset = 2;
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[msgOffset]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Level'
-        response.put("SIZE", new Integer(payload[msgOffset] & 0x07));
-        response.put("DEFAULT", new Boolean((payload[msgOffset] & 0x80) != 0));
+        response.put("SIZE", Integer.valueOf(payload[msgOffset] & 0x07));
+        response.put("DEFAULT", Boolean.valueOf((payload[msgOffset] & 0x80) != 0));
         msgOffset += 1;
 
         // Process 'Configuration Value'
@@ -253,7 +253,7 @@ public class CommandClassConfigurationV4 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[2]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[2]));
 
         // Return the map of processed response data;
         return response;
@@ -317,11 +317,11 @@ public class CommandClassConfigurationV4 {
         int msgOffset = 2;
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[msgOffset]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Level'
-        response.put("SIZE", new Integer(payload[msgOffset] & 0x07));
+        response.put("SIZE", Integer.valueOf(payload[msgOffset] & 0x07));
         msgOffset += 1;
 
         // Process 'Configuration Value'
@@ -404,17 +404,17 @@ public class CommandClassConfigurationV4 {
         int msgOffset = 2;
 
         // Process 'Parameter Offset'
-        response.put("PARAMETER_OFFSET", new Integer(payload[msgOffset] << 8 + payload[msgOffset + 12]));
+        response.put("PARAMETER_OFFSET", Integer.valueOf(payload[msgOffset] << 8 + payload[msgOffset + 12]));
         msgOffset += 2;
 
         // Process 'Number of Parameters'
-        response.put("NUMBER_OF_PARAMETERS", new Integer(payload[msgOffset]));
+        response.put("NUMBER_OF_PARAMETERS", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Properties1'
-        response.put("SIZE", new Integer(payload[msgOffset] & 0x07));
-        response.put("HANDSHAKE", new Boolean((payload[msgOffset] & 0x40) != 0));
-        response.put("DEFAULT", new Boolean((payload[msgOffset] & 0x80) != 0));
+        response.put("SIZE", Integer.valueOf(payload[msgOffset] & 0x07));
+        response.put("HANDSHAKE", Boolean.valueOf((payload[msgOffset] & 0x40) != 0));
+        response.put("DEFAULT", Boolean.valueOf((payload[msgOffset] & 0x80) != 0));
         msgOffset += 1;
 
         // Process 'vg'
@@ -498,10 +498,10 @@ public class CommandClassConfigurationV4 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Parameter Offset'
-        response.put("PARAMETER_OFFSET", new Integer(payload[2] << 8 + payload[3]));
+        response.put("PARAMETER_OFFSET", Integer.valueOf(payload[2] << 8 + payload[3]));
 
         // Process 'Number of Parameters'
-        response.put("NUMBER_OF_PARAMETERS", new Integer(payload[4]));
+        response.put("NUMBER_OF_PARAMETERS", Integer.valueOf(payload[4]));
 
         // Return the map of processed response data;
         return response;
@@ -579,21 +579,21 @@ public class CommandClassConfigurationV4 {
         int msgOffset = 2;
 
         // Process 'Parameter Offset'
-        response.put("PARAMETER_OFFSET", new Integer(payload[msgOffset] << 8 + payload[msgOffset + 12]));
+        response.put("PARAMETER_OFFSET", Integer.valueOf(payload[msgOffset] << 8 + payload[msgOffset + 12]));
         msgOffset += 2;
 
         // Process 'Number of Parameters'
-        response.put("NUMBER_OF_PARAMETERS", new Integer(payload[msgOffset]));
+        response.put("NUMBER_OF_PARAMETERS", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Reports to follow'
-        response.put("REPORTS_TO_FOLLOW", new Integer(payload[msgOffset]));
+        response.put("REPORTS_TO_FOLLOW", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Properties1'
-        response.put("SIZE", new Integer(payload[msgOffset] & 0x07));
-        response.put("HANDSHAKE", new Boolean((payload[msgOffset] & 0x40) != 0));
-        response.put("DEFAULT", new Boolean((payload[msgOffset] & 0x80) != 0));
+        response.put("SIZE", Integer.valueOf(payload[msgOffset] & 0x07));
+        response.put("HANDSHAKE", Boolean.valueOf((payload[msgOffset] & 0x40) != 0));
+        response.put("DEFAULT", Boolean.valueOf((payload[msgOffset] & 0x80) != 0));
         msgOffset += 1;
 
         // Process 'vg'
@@ -672,7 +672,7 @@ public class CommandClassConfigurationV4 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[2] << 8 + payload[3]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[2] << 8 + payload[3]));
 
         // Return the map of processed response data;
         return response;
@@ -737,11 +737,11 @@ public class CommandClassConfigurationV4 {
         int msgOffset = 2;
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[msgOffset] << 8 + payload[msgOffset + 12]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[msgOffset] << 8 + payload[msgOffset + 12]));
         msgOffset += 2;
 
         // Process 'Reports to follow'
-        response.put("REPORTS_TO_FOLLOW", new Integer(payload[msgOffset]));
+        response.put("REPORTS_TO_FOLLOW", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Name'
@@ -799,7 +799,7 @@ public class CommandClassConfigurationV4 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[2] << 8 + payload[3]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[2] << 8 + payload[3]));
 
         // Return the map of processed response data;
         return response;
@@ -864,11 +864,11 @@ public class CommandClassConfigurationV4 {
         int msgOffset = 2;
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[msgOffset] << 8 + payload[msgOffset + 12]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[msgOffset] << 8 + payload[msgOffset + 12]));
         msgOffset += 2;
 
         // Process 'Reports to follow'
-        response.put("REPORTS_TO_FOLLOW", new Integer(payload[msgOffset]));
+        response.put("REPORTS_TO_FOLLOW", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Info'
@@ -926,7 +926,7 @@ public class CommandClassConfigurationV4 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[2] << 8 + payload[3]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[2] << 8 + payload[3]));
 
         // Return the map of processed response data;
         return response;
@@ -1053,11 +1053,11 @@ public class CommandClassConfigurationV4 {
         int msgOffset = 2;
 
         // Process 'Parameter Number'
-        response.put("PARAMETER_NUMBER", new Integer(payload[msgOffset] << 8 + payload[msgOffset + 12]));
+        response.put("PARAMETER_NUMBER", Integer.valueOf(payload[msgOffset] << 8 + payload[msgOffset + 12]));
         msgOffset += 2;
 
         // Process 'Properties1'
-        response.put("SIZE", new Integer(payload[msgOffset] & 0x07));
+        response.put("SIZE", Integer.valueOf(payload[msgOffset] & 0x07));
         switch ((payload[msgOffset] & 0x38) >> 3) {
             case 0x00:
                 response.put("FORMAT", "SIGNED_INTEGER");
@@ -1074,8 +1074,8 @@ public class CommandClassConfigurationV4 {
             default:
                 logger.debug("Unknown enum value {} for FORMAT", String.format("0x%02X", msgOffset));
         }
-        response.put("READONLY", new Boolean((payload[msgOffset] & 0x40) != 0));
-        response.put("RE_INCLUSION_REQUIRED", new Boolean((payload[msgOffset] & 0x80) != 0));
+        response.put("READONLY", Boolean.valueOf((payload[msgOffset] & 0x40) != 0));
+        response.put("RE_INCLUSION_REQUIRED", Boolean.valueOf((payload[msgOffset] & 0x80) != 0));
         msgOffset += 1;
 
         // Process 'Min Value'
@@ -1106,12 +1106,12 @@ public class CommandClassConfigurationV4 {
         msgOffset += lenDefaultValue;
 
         // Process 'Next Parameter Number'
-        response.put("NEXT_PARAMETER_NUMBER", new Integer(payload[msgOffset] << 8 + payload[msgOffset + 12]));
+        response.put("NEXT_PARAMETER_NUMBER", Integer.valueOf(payload[msgOffset] << 8 + payload[msgOffset + 12]));
         msgOffset += 2;
 
         // Process 'Properties2'
-        response.put("ADVANCED", new Boolean((payload[msgOffset] & 0x01) != 0));
-        response.put("NO_BULK_SUPPORT", new Boolean((payload[msgOffset] & 0x02) != 0));
+        response.put("ADVANCED", Boolean.valueOf((payload[msgOffset] & 0x01) != 0));
+        response.put("NO_BULK_SUPPORT", Boolean.valueOf((payload[msgOffset] & 0x02) != 0));
         msgOffset += 1;
 
         // Return the map of processed response data;
