@@ -180,7 +180,7 @@ public class CommandClassSecurityV1 {
         int msgOffset = 2;
 
         // Process 'Reports to follow'
-        response.put("REPORTS_TO_FOLLOW", new Integer(payload[msgOffset]));
+        response.put("REPORTS_TO_FOLLOW", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Command Class support'
@@ -253,7 +253,7 @@ public class CommandClassSecurityV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Supported Security Schemes'
-        response.put("SUPPORTED_SECURITY_SCHEMES", new Integer(payload[2]));
+        response.put("SUPPORTED_SECURITY_SCHEMES", Integer.valueOf(payload[2]));
 
         // Return the map of processed response data;
         return response;
@@ -301,7 +301,7 @@ public class CommandClassSecurityV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Supported Security Schemes'
-        response.put("SUPPORTED_SECURITY_SCHEMES", new Integer(payload[2]));
+        response.put("SUPPORTED_SECURITY_SCHEMES", Integer.valueOf(payload[2]));
 
         // Return the map of processed response data;
         return response;
@@ -443,7 +443,7 @@ public class CommandClassSecurityV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Supported Security Schemes'
-        response.put("SUPPORTED_SECURITY_SCHEMES", new Integer(payload[2]));
+        response.put("SUPPORTED_SECURITY_SCHEMES", Integer.valueOf(payload[2]));
 
         // Return the map of processed response data;
         return response;
@@ -631,9 +631,9 @@ public class CommandClassSecurityV1 {
         msgOffset += 8;
 
         // Process 'Properties1'
-        response.put("SEQUENCE_COUNTER", new Integer(payload[msgOffset] & 0x0F));
-        response.put("SEQUENCED", new Boolean((payload[msgOffset] & 0x10) != 0));
-        response.put("SECOND_FRAME", new Boolean((payload[msgOffset] & 0x20) != 0));
+        response.put("SEQUENCE_COUNTER", Integer.valueOf(payload[msgOffset] & 0x0F));
+        response.put("SEQUENCED", Boolean.valueOf((payload[msgOffset] & 0x10) != 0));
+        response.put("SECOND_FRAME", Boolean.valueOf((payload[msgOffset] & 0x20) != 0));
         msgOffset += 1;
 
         // Process 'Command byte'
@@ -645,7 +645,7 @@ public class CommandClassSecurityV1 {
         response.put("COMMAND_BYTE", valCommandByte);
 
         // Process 'Receivers nonce Identifier'
-        response.put("RECEIVERS_NONCE_IDENTIFIER", new Integer(payload[msgOffset]));
+        response.put("RECEIVERS_NONCE_IDENTIFIER", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Message Authentication Code byte'
@@ -752,9 +752,9 @@ public class CommandClassSecurityV1 {
         msgOffset += 8;
 
         // Process 'Properties1'
-        response.put("SEQUENCE_COUNTER", new Integer(payload[msgOffset] & 0x0F));
-        response.put("SEQUENCED", new Boolean((payload[msgOffset] & 0x10) != 0));
-        response.put("SECOND_FRAME", new Boolean((payload[msgOffset] & 0x20) != 0));
+        response.put("SEQUENCE_COUNTER", Integer.valueOf(payload[msgOffset] & 0x0F));
+        response.put("SEQUENCED", Boolean.valueOf((payload[msgOffset] & 0x10) != 0));
+        response.put("SECOND_FRAME", Boolean.valueOf((payload[msgOffset] & 0x20) != 0));
         msgOffset += 1;
 
         // Process 'Command byte'
@@ -766,7 +766,7 @@ public class CommandClassSecurityV1 {
         response.put("COMMAND_BYTE", valCommandByte);
 
         // Process 'Receivers nonce Identifier'
-        response.put("RECEIVERS_NONCE_IDENTIFIER", new Integer(payload[msgOffset]));
+        response.put("RECEIVERS_NONCE_IDENTIFIER", Integer.valueOf(payload[msgOffset]));
         msgOffset += 1;
 
         // Process 'Message Authentication Code byte'
