@@ -125,8 +125,8 @@ public class CommandClassSensorConfigurationV1 {
         int msgOffset = 2;
 
         // Process 'Properties1'
-        response.put("CURRENT", new Boolean((payload[msgOffset] & 0x40) != 0));
-        response.put("DEFAULT", new Boolean((payload[msgOffset] & 0x80) != 0));
+        response.put("CURRENT", Boolean.valueOf((payload[msgOffset] & 0x40) != 0));
+        response.put("DEFAULT", Boolean.valueOf((payload[msgOffset] & 0x80) != 0));
         msgOffset += 1;
 
         // Process 'Sensor Type'
@@ -177,9 +177,9 @@ public class CommandClassSensorConfigurationV1 {
         msgOffset += 1;
 
         // Process 'Properties2'
-        response.put("SIZE", new Integer(payload[msgOffset] & 0x07));
-        response.put("SCALE", new Integer((payload[msgOffset] & 0x18 >> 3)));
-        response.put("PRECISION", new Integer((payload[msgOffset] & 0xE0 >> 5)));
+        response.put("SIZE", Integer.valueOf(payload[msgOffset] & 0x07));
+        response.put("SCALE", Integer.valueOf((payload[msgOffset] & 0x18 >> 3)));
+        response.put("PRECISION", Integer.valueOf((payload[msgOffset] & 0xE0 >> 5)));
         msgOffset += 1;
 
         // Process 'Trigger Value'
@@ -344,9 +344,9 @@ public class CommandClassSensorConfigurationV1 {
         msgOffset += 1;
 
         // Process 'Properties1'
-        response.put("SIZE", new Integer(payload[msgOffset] & 0x07));
-        response.put("SCALE", new Integer((payload[msgOffset] & 0x18 >> 3)));
-        response.put("PRECISION", new Integer((payload[msgOffset] & 0xE0 >> 5)));
+        response.put("SIZE", Integer.valueOf(payload[msgOffset] & 0x07));
+        response.put("SCALE", Integer.valueOf((payload[msgOffset] & 0x18 >> 3)));
+        response.put("PRECISION", Integer.valueOf((payload[msgOffset] & 0xE0 >> 5)));
         msgOffset += 1;
 
         // Process 'Trigger Value'
