@@ -241,11 +241,11 @@ public class CommandClassSwitchToggleMultilevelV1 {
         Map<String, Object> response = new HashMap<String, Object>();
 
         // Process 'Level'
-        response.put("IGNORE_START_LEVEL", new Boolean((payload[2] & 0x20) != 0));
-        response.put("ROLL_OVER", new Boolean((payload[2] & 0x80) != 0));
+        response.put("IGNORE_START_LEVEL", Boolean.valueOf((payload[2] & 0x20) != 0));
+        response.put("ROLL_OVER", Boolean.valueOf((payload[2] & 0x80) != 0));
 
         // Process 'Start Level'
-        response.put("START_LEVEL", new Integer(payload[3]));
+        response.put("START_LEVEL", Integer.valueOf(payload[3]));
 
         // Return the map of processed response data;
         return response;
